plugins {
    id "fabric-loom" version "1.11-SNAPSHOT"
    id "maven-publish"
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    maven { url "https://maven.parchmentmc.org/" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-1.21.8:${project.parchment_version}@zip")
    }
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
    inputs.property "version", project.mod_version

    filesMatching("fabric.mod.json") {
        expand "version": project.mod_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 21
}

loom {
    accessWidenerPath = file("src/main/resources/${project.archives_base_name}.accesswidener")

    mixin {
        defaultRefmapName = "${project.archives_base_name}.refmap.json"
    }
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE")
    jar.archiveAppendix.set("fabric-${project.minecraft_version}")
    sourcesJar.archiveAppendix.set("fabric-${project.minecraft_version}")
    remapJar.archiveAppendix.set("fabric-${project.minecraft_version}")
    remapSourcesJar.archiveAppendix.set("fabric-${project.minecraft_version}")
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact(remapJar) {
                builtBy remapJar
            }
            artifact(sourcesJar) {
                builtBy remapSourcesJar
            }
        }
    }

    repositories {
    }
}